Placeholder for topics to cover

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -35,10 +35,7 @@
 
 \begin{document}
 
-% Disable words breaking over lines for final submission:
-% \raggedright
-% \pagestyle{empty}
-
+\mstitleshort
 %\mstitlepage
 \parindent=1.5em
 \addtolength{\parskip}{.3em}
@@ -47,9 +44,54 @@
 % Abstract goes here\ldots
 % \end{abstract}
 
-\section{Introduction}
+\section{Background \& Motivation}
 
-\citep{Falster-2011}
+Why trait gradients
+
+Plant model as platform \citep{Falster-2016}
+
+Key questions
+
+\section{Conceptual overview of analysis}
+
+\subsection{Diversification in successional strategy}
+
+Requires demographic trade-off between growth in high-light and shade-tolerance.
+
+Possible via trade-offs in either LMA or wood density,
+
+\subsection{Stress tolerance trait}
+
+
+\section{Review: Empirical patterns of trait variation across abiotic
+gradients}
+
+
+\subsection{Leaf mass per area}
+
+Also include leaf lifespan?
+
+
+Wright 2002
+
+Wright 2004
+
+Onoda 2011
+
+Fortunel
+
+Moles 2014
+
+Reich 2014
+
+Niinemets
+
+
+Kunstler - forestry data
+
+
+\subsection{Wood density}
+
 
 \clearpage
 
