--- a/ms/references.bib
+++ b/ms/references.bib
@@ -25,7 +25,7 @@
   author = {D S Falster and R G FitJohn and M Westoby},
   title = {plant: A package for modelling forest trait
                   ecology \& evolution},
-  journal = {Submitted to \textit{Methods in Ecology and
-                  Evolution}},
-  year = {\textit{submitted}},
+  journal = {Methods in Ecology and Evolution},
+  year = {2016},
+  pages = {\textit{submitted}},
 }
