Add empirical referencs

--- a/ms/references.bib
+++ b/ms/references.bib
@@ -1,4 +1,3 @@
-
 @Article{Falster-2011,
   author = {D S Falster and {\AA} Br\"annstr\"om and U Dieckmann and M Westoby},
   title = {Influence of four major plant traits on average
@@ -28,4 +27,116 @@
   journal = {Methods in Ecology and Evolution},
   year = {2016},
   pages = {\textit{submitted}},
+}
+
+@Article{Fortunel-2012,
+  title = {Leaf, stem and root tissue strategies across 758 Neotropical tree species},
+  volume = {26},
+  doi = {10.1111/j.1365-2435.2012.02020.x},
+  number = {5},
+  journal = {Functional Ecology},
+  author = {Claire Fortunel and Paul V. A. Fine and Christopher Baraloto},
+  year = {2012},
+  pages = {1153--1161},
+}
+
+@Article{Fortunel-2013,
+  title = {Wood specific gravity and anatomy of branches and roots in 113 Amazonian rainforest tree species across environmental gradients},
+  doi = {10.1111/nph.12632},
+  journal = {New Phytologist},
+  author = {Claire Fortunel and Julien Ruelle and Jacques Beauch{\^e}ne and Paul V. A. Fine and Christopher Baraloto},
+  year = {2013},
+  pages = {n/a--n/a},
+}
+
+@Article{Fortunel-2014,
+  title = {Environmental factors predict community functional composition in Amazonian forests},
+  volume = {102},
+  doi = {10.1111/1365-2745.12160},
+  number = {1},
+  journal = {Journal of Ecology},
+  author = {Claire Fortunel and C. E. Timothy Paine and Paul V. A. Fine and Nathan J. B. Kraft and Christopher Baraloto},
+  year = {2014},
+  pages = {145--155},
+}
+
+@Article{Moles-2014,
+  title = {Which is a better predictor of plant traits: temperature or precipitation?},
+  doi = {10.1111/jvs.12190},
+  journal = {Journal of Vegetation Science},
+  author = {Angela T. Moles and Sarah E. Perkins and Shawn W. Laffan and Habacuc Flores-Moreno and Monica Awasthy and Marianne L. Tindall and Lawren Sack and Andy Pitman and Jens Kattge and Lonnie W. Aarssen and Madhur Anand and Michael Bahn and Benjamin Blonder and Jeannine Cavender-Bares and J. Hans C. Cornelissen and Will K. Cornwell and Sandra D{\'\i}az and John B. Dickie and Gr{\'e}goire T. Freschet and Joshua G. Griffiths and Alvaro G. Gutierrez and Frank A. Hemmings and Thomas Hickler and Timothy D. Hitchcock and Matthew Keighery and Michael Kleyer and Hiroko Kurokawa and Michelle R. Leishman and Kenwin Liu and {\"U}lo Niinemets and Vladimir Onipchenko and Yusuke Onoda and Josep Penuelas and Val{\'e}rio D. Pillar and Peter B. Reich and Satomi Shiodera and Andrew Siefert and Enio E. Sosinski and Nadejda A. Soudzilovskaia and Emily K. Swaine and Nathan G. Swenson and Peter M. van Bodegom and Laura Warman and Evan Weiher and Ian J. Wright and Hongxiang Zhang and Martin Zobel and Stephen P. Bonser},
+  year = {2014},
+  pages = {n/a--n/a},
+}
+
+@Article{Onoda-2011,
+  title = {Global patterns of leaf mechanical properties},
+  volume = {14},
+  doi = {10.1111/j.1461-0248.2010.01582.x},
+  number = {3},
+  journal = {Ecology Letters},
+  author = {Yusuke Onoda and Mark Westoby and Peter B. Adler and Amy M. F. Choong and Fiona J. Clissold and Johannes H. C. Cornelissen and Sandra D{\'\i}az and Nathaniel J. Dominy and Alison Elgart and Lucas Enrico and Paul V. A. Fine and Jerome J. Howard and Adel Jalili and Kaoru Kitajima and Hiroko Kurokawa and Clare  McArthur and Peter W. Lucas and Lars Markesteijn and Natalia P{\'e}rez-Harguindeguy and Lourens Poorter and Lora Richards and Louis S. Santiago and Enio E. Sosinski and Sunshine A. Van Bael and David I. Warton and I. J. Wright and S. J. Wright and Nayuta Yamashita},
+  year = {2011},
+  pages = {301--312},
+}
+
+@Article{Reich-1997,
+  title = {From tropics to tundra: global convergence in plant functioning},
+  volume = {94},
+  journal = {Proceedings of the National Academy of Science, {USA}},
+  author = {P. B. Reich and M. B. Walters and D. S. Ellsworth},
+  year = {1997},
+  pages = {13730--13734},
+}
+
+@Article{Reich-1999,
+  title = {Generality of leaf trait relationships: a test across six biomes},
+  volume = {80},
+  number = {6},
+  journal = {Ecology},
+  author = {P. B. Reich and D. S. Ellsworth and M. B. Walters and J. M. Vose and C. Gresham and J. C. Volin and W. D. Bowman},
+  year = {1999},
+  pages = {1955--1969},
+}
+
+@Article{Reich-2007,
+  title = {Predicting leaf physiology from simple plant and climate attributes: A global {GLOPNET} analysis},
+  volume = {17},
+  number = {7},
+  journal = {Ecological Applications},
+  author = {P. B. Reich and I. J. Wright and C. H. Lusk},
+  year = {2007},
+  pages = {1982--1988},
+}
+
+@Article{Reich-2014a,
+  title = {Biogeographic variation in evergreen conifer needle longevity and impacts on boreal forest carbon cycle projections},
+  volume = {111},
+  doi = {10.1073/pnas.1216054110},
+  number = {38},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Peter B. Reich and Roy L. Rich and Xingjie Lu and Ying-Ping Wang and Jacek Oleksyn},
+  year = {2014},
+  pages = {13703--13708},
+}
+
+@Article{Wright-2004,
+  title = {The world-wide leaf economics spectrum},
+  volume = {428},
+  doi = {10.1038/nature02403},
+  number = {2403},
+  journal = {Nature},
+  author = {I. J. Wright and P. B. Reich and M. Westoby and D.D. Ackerly and Z. Baruch and F. Bongers and J. Cavender-Bares and F.S. Chapin and J.H.C. Cornelissen and M. Diemer and J. Flexas and E. Garnier and P.K. Groom and J. Gulias and K. Hikosaka and B.B. Lamont and T. Lee and W. Lee and C. Lusk and J.J. Midgley and M-L. Navas and {\"U}. Niinemets and J. Oleksyn and N. Osada and H. Poorter and P. Poot and L. Prior and V.I. Pyankov and C. Roumet and S.C. Thomas and M.G. Tjoelker and E. Veneklaas and R. Villar},
+  year = {2004},
+  pages = {821--827},
+}
+
+@Article{Wright-2005,
+  title = {Modulation of leaf economic traits and trait relationships by climate},
+  volume = {14},
+  doi = {10.1111/j.1466-822x.2005.00172.x},
+  journal = {Global Ecology and Biogeography Letters},
+  author = {I. J. Wright and P. B. Reich and J. H. C. Cornelissen and D. S. Falster and P. K. Groom and K. Hikosaka and W. Lee and C. H. Lusk and {\"U}. Niinemets and J. Oleksyn and N. Osada and H. Poorter and D. I. Warton and M. Westoby},
+  year = {2005},
+  pages = {411--421},
 }
