add refs and first papers read

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -86,11 +86,24 @@ Reich 2014
 
 Niinemets
 
-
 Kunstler - forestry data
 
 
+Fortunel 2014 J Ecol, higher LMA  in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
+
+
+\subsection{Leaf nitrogen}
+
+Swenson-2010 Ecology: Mean leaf nitrogen of US forest inventory plot decrease with precipitation and temperature. And variance of variance of leaf nitrogen decrease with Tmax.
+
+
 \subsection{Wood density}
+
+Fortunel 2014 New Phytol, in white sand forest, higher wood density (WSG) and fiber wall fraction but lower lumen fraction than in flooded forest or terra firme forest (less water stress) but not variation in vessel anatomic and hydraulic traits. However, variation within site is larger than between sites.
+
+Fortunel 2014 J Ecol, higher wood density in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
+
+Swenson-2010 Ecology: Mean wood density of US forest inventory plot increase with precipitation and temperature. But variance of wood density decrease with Tmax.
 
 
 \clearpage
