--- a/ms/references.bib
+++ b/ms/references.bib
@@ -140,3 +140,62 @@
   year = {2005},
   pages = {411--421},
 }
+
+@article{preston-2006b,
+  title = {Wood density and vessel traits as distinct correlates of ecological strategy in 51 California coast range angiosperms.},
+  volume = {170},
+  number = {4},
+  journal = {New Phytologist},
+  author = {Preston, Katherine a and Cornwell, William K and Denoyer, Jeanne L},
+  month = jan,
+  year = {2006},
+  keywords = {Angiosperms,Angiosperms: anatomy \& histology,Angiosperms: growth \& development,Biological Evolution,California,Data Interpretation, Statistical,Ecology,Phylogeny,Soil,Water,Water: metabolism},
+  pages = {807--18}
+}
+
+@article{cornwell-2009c,
+  title = {Community assembly and shifts in plant trait distributions across an environmental gradient in coastal California},
+  volume = {79},
+  number = {1},
+  journal = {Ecological Monographs},
+  author = {Cornwell, William K. and Ackerly, David D.},
+  year = {2009},
+  pages = {109--126}
+}
+
+@article{swenson-2010b,
+  title = {Plant geography upon the basis of functional traits: an example from eastern North American trees.},
+  volume = {91},
+  number = {8},
+  journal = {Ecology},
+  author = {Swenson, Nathan G and Weiser, Michael D},
+  year = {2010},
+  keywords = {Demography,Ecosystem,Plant Leaves,Plant Leaves: chemistry,Population Density,Trees,Trees: physiology,united states,Wood},
+  pages = {2234--41}
+}
+
+@article{gleason-2012,
+  title = {Stem xylem conductivity is key to plant water balance across Australian angiosperm species: Plant stem hydraulic traits},
+  volume = {26},
+  number = {2},
+  journal = {Functional Ecology},
+  author = {Gleason, Sean M. and Butler, Don W. and Ziemi{\'n}ska, Kasia and Waryszak, Pawe{\l} and Westoby, Mark},
+  year = {2012},
+  pages = {343--352}
+}
+
+@article{maire-2015,
+  title = {Global effects of soil and climate on leaf photosynthetic traits and rates: Effects of soil and climate on photosynthetic traits},
+  volume = {24},
+  shorttitle = {Global effects of soil and climate on leaf photosynthetic traits and rates},
+  url = {http://doi.wiley.com/10.1111/geb.12296},
+  doi = {10.1111/geb.12296},
+  number = {6},
+  journal = {Global Ecology and Biogeography},
+  author = {Maire, Vincent and Wright, Ian J. and Prentice, I. Colin and Batjes, Niels H. and Bhaskar, Radika and van Bodegom, Peter M. and Cornwell, Will K. and Ellsworth, David and Niinemets, {\"U}lo and Ordonez, Alejandro and Reich, Peter B. and Santiago, Louis S.},
+  month = jun,
+  year = {2015},
+  pages = {706--717}
+}
+
+
