Empirical patterns, mostly LMA

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -69,41 +69,49 @@ gradients}
 
 \subsection{Leaf mass per area}
 
-Also include leaf lifespan?
+\citet{Niinemets-2001}: compared LMA for 558 broad-leaved and 39 needle-leaved shrubs and trees from 182 geographical locations distributed. LMA decreasing with rainfall (in driest month). Also increasing with irradiance. Thickness and LMA also increasing with MAT.
+
+\citet{Wright-2002}: compared relationships between LMA and leaf lifespan at two low and two high rainfall sites. Low rainfall sites tended to have slightly high LMA and also lower LL at given LMA, i.e. intercept of relationship decreased. Species from low rainfall sites were also easier to cut (work to shear) at given LMA, so the interpretation was that lower LL for given LMA was because leaves consisted of soft internal tissues (e.g. more mesophyll, high leaf N).
+
+\citet{Wright-2004}: Data 2,370 species from 163 sites. LMA increases with MAT and decrease with MAR (figure 3).
+
+\citet{Wright-2005}: At hotter, drier and higher irradiance sites mean LMA was higher; At drier sites average LL was shorter at a given LMA (confirming patterns from Wright 2002); at hotter sites the increase in LL was less for a given increase in LMA (LL-LMA slope became less positive)
+
+\citet{Onoda-2011}: data for 2819 species from 90 sites worldwide. LMA tends to be higher on drier sites.
+
+\citet{Moles-2014}: data for 10792 species from 722 sites. LMA decreases with MAR, increases with MAT.
+
+\citet{Simova-2014}: across entire Nth American continent, LMA decreasing with MAT and MAP, increasing with degree of seasonality. No signif change in variance. Note patterns with temperature in this study is opposite to all the above results. Also decreases with MAT but increases with degree of seasonality --> is this conflicting?
+
+\citet{Laughlin-2012}: Data for nine tree species in the southwest USA across 196 plots,between 2200 and 3600 m altitude, corresponding to a 10 degC range in MAT. LMA decreased with MAT.
 
 
-Wright 2002
-
-Wright 2004
-
-Onoda 2011
-
-Fortunel
-
-Moles 2014
-
-Reich 2014
-
-Niinemets
-
-Kunstler - forestry data
-
-
-Fortunel 2014 J Ecol, higher LMA  in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
-
-
-\subsection{Leaf nitrogen}
-
-Swenson-2010 Ecology: Mean leaf nitrogen of US forest inventory plot decrease with precipitation and temperature. And variance of variance of leaf nitrogen decrease with Tmax.
+\citet{Fortunel 2014}: higher LMA  in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
 
 
 \subsection{Wood density}
 
-Fortunel 2014 New Phytol, in white sand forest, higher wood density (WSG) and fiber wall fraction but lower lumen fraction than in flooded forest or terra firme forest (less water stress) but not variation in vessel anatomic and hydraulic traits. However, variation within site is larger than between sites.
+\citet{Fortunel 2014}: in white sand forest, higher wood density (WSG) and fiber wall fraction but lower lumen fraction than in flooded forest or terra firme forest (less water stress) but not variation in vessel anatomic and hydraulic traits. However, variation within site is larger than between sites.
 
-Fortunel 2014 J Ecol, higher wood density in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
+\citet{Fortunel 2014}: higher wood density in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
 
-Swenson-2010 Ecology: Mean wood density of US forest inventory plot increase with precipitation and temperature. But variance of wood density decrease with Tmax.
+\citet{Swenson-2010}: Mean wood density of US forest inventory plot increase with precipitation and temperature. But variance of wood density decrease with Tmax.
+
+
+\citet{Laughlin-2012}: Data for nine tree species in the south-west USA across 196 plots,between 2200 and 3600 m altitude, corresponding to a 10 degC range in MAT. Concave-shaped relationship with MAT.
+
+\citet{Simova-2014}: across entire Nth American continent. Weak non-significant pattern of WD increasing with MAT, decreasing with MAP, and variance decreasing with MAP (lower variance in high rainfall)
+
+\citet{Chave-2006}: WD for 2456 tree species from Central and South America. Wood density varied over more than one order of magnitude across species, with an overall mean of 0.645 g/cm3. Our geographical analysis showed significant decreases in wood density with increasing altitude and significant differences among low-altitude geographical regions: wet forests of Central America and western Amazonia have significantly lower mean wood density than dry forests of Central and South America, eastern and central Amazonian forests, and the Atlantic forests of Brazil; and eastern Amazonian forests have lower wood densities than the dry forests and the Atlantic forest.
+
+\citet{Chave-2009}: some weak evidence that WD max be more variable in tropic than temperate zone. A negative relationship between wood density and soil fertility appears widespread (Baker et al. 2004; ter Steege et al. 2006), as does a positive but weaker relationship between wood density and temperature. Little relationship with rainfall (cite Swenson). Yet Fig 6 suggests can predict 50\% of variance in mean WD across nth and Sth America from mean annual temperature, annual precipitation, precipitation seasonality and temperature seasonality.
+
+\citet{Kooyman-2010}: plot means of WD in Australian rainforests tends to increase with soil texture and decrease with soil depth.
+
+
+\subsection{Leaf nitrogen}
+
+\citet{Swenson-2010}: Mean leaf nitrogen of US forest inventory plot decrease with precipitation and temperature. And variance of variance of leaf nitrogen decrease with Tmax.
 
 
 \clearpage
