--- a/ms/references.bib
+++ b/ms/references.bib
@@ -1,3 +1,68 @@
+@Article{Baker-2004,
+  title = {Variation in wood density determines spatial patterns in Amazonian forest biomass},
+  volume = {10},
+  doi = {10.1111/j.1365-2486.2004.00751.x},
+  number = {5},
+  journal = {Global Change Biology},
+  author = {Timothy R. Baker and Oliver L. Phillips and Yadvinder Malhi and Samuel Almeida and Luzmila Arroyo and Anthony Di Fiore and Terry Erwin and Tim J. Killeen and S. G. Laurance and W. F. Laurance and S. L. Lewis and Jon Lloyd and Abel Monteagudo and David A. Neill and S. Pati{\~n}o and N. C. A. Pitman and J. N. M. Silva and R. V. Martinez},
+  year = {2004},
+  pages = {545--562},
+}
+
+@Article{Chave-2006,
+  title = {Regional and phylogenetic variation of wood density across 2456 neotropical tree species},
+  volume = {16},
+  doi = {10.1890/1051-0761(2006)016[2356:RAPVOW]2.0.CO;2},
+  number = {6},
+  journal = {Ecological Applications},
+  author = {J. Chave and H. C. Muller-Landau and T. R. Baker and Tomas A Easdale and H. T. Steege and C. O. Webb},
+  year = {2006},
+  pages = {2356--2367},
+}
+
+@Article{Chave-2009,
+  title = {Towards a worldwide wood economics spectrum},
+  volume = {12},
+  doi = {10.1111/j.1461-0248.2009.01285.x},
+  number = {4},
+  journal = {Ecology Letters},
+  author = {J. Chave and D. A. Coomes and S. Jansen and S. L. Lewis and N. G. Swenson and A. Zanne},
+  year = {2009},
+  pages = {351--366},
+}
+
+@Article{Cornwell-2009c,
+  title = {Community assembly and shifts in plant trait distributions across an environmental gradient in coastal California},
+  volume = {79},
+  number = {1},
+  journal = {Ecological Monographs},
+  author = {William K. Cornwell and David D. Ackerly},
+  year = {2009},
+  pages = {109--126},
+}
+
+@Article{Douma-2011,
+  title = {Disturbance and resource availability act differently on the same suite of plant traits: revisiting assembly hypotheses},
+  volume = {93},
+  doi = {10.1890/10-1961.1},
+  number = {4},
+  journal = {Ecology},
+  author = {J. C. Douma and B Shipley and J.-P. M. Witte and R Aerts and P. M. van Bodegom},
+  year = {2011},
+  pages = {825--835},
+}
+
+@Article{Douma-2011,
+  title = {Disturbance and resource availability act differently on the same suite of plant traits: revisiting assembly hypotheses},
+  volume = {93},
+  doi = {10.1890/10-1961.1},
+  number = {4},
+  journal = {Ecology},
+  author = {J. C. Douma and B Shipley and J.-P. M. Witte and R Aerts and P. M. van Bodegom},
+  year = {2011},
+  pages = {825--835},
+}
+
 @Article{Falster-2011,
   author = {D S Falster and {\AA} Br\"annstr\"om and U Dieckmann and M Westoby},
   title = {Influence of four major plant traits on average
@@ -60,6 +125,49 @@
   pages = {145--155},
 }
 
+@Article{Gleason-2012,
+  title = {Stem xylem conductivity is key to plant water balance across Australian angiosperm species: Plant stem hydraulic traits},
+  volume = {26},
+  number = {2},
+  journal = {Functional Ecology},
+  author = {Sean M. Gleason and Don W. Butler and Kasia Ziemi{\'n}ska and Pawe{\l} Waryszak and Mark Westoby},
+  year = {2012},
+  pages = {343--352},
+}
+
+@Article{Kooyman-2010,
+  title = {Plant functional traits in Australian subtropical rain forest : partitioning within-community from cross-landscape variation},
+  volume = {98},
+  doi = {10.1111/j.1365-2745.2010.01642.x},
+  number = {3},
+  journal = {Journal of Ecology},
+  author = {R. Kooyman and W. Cornwell and M. Westoby},
+  year = {2010},
+  pages = {517--525},
+}
+
+@Article{Laughlin-2012,
+  title = {A predictive model of community assembly that incorporates intraspecific trait variation},
+  volume = {15},
+  doi = {10.1111/j.1461-0248.2012.01852.x},
+  number = {11},
+  journal = {Ecology Letters},
+  author = {Daniel C. Laughlin and Chaitanya Joshi and Peter M. Bodegom and Zachary A. Bastow and Peter Z. Ful \'e},
+  year = {2012},
+  pages = {1291--1299},
+}
+
+@Article{Maire-2015,
+  title = {Global effects of soil and climate on leaf photosynthetic traits and rates: Effects of soil and climate on photosynthetic traits},
+  volume = {24},
+  doi = {10.1111/geb.12296},
+  number = {6},
+  journal = {Global Ecology and Biogeography},
+  author = {Vincent Maire and Ian J. Wright and I. Colin Prentice and Niels H. Batjes and Radika Bhaskar and Peter M. van Bodegom and Will K. Cornwell and David Ellsworth and {\"U}lo Niinemets and Alejandro Ordonez and Peter B. Reich and Louis S. Santiago},
+  year = {2015},
+  pages = {706--717},
+}
+
 @Article{Moles-2014,
   title = {Which is a better predictor of plant traits: temperature or precipitation?},
   doi = {10.1111/jvs.12190},
@@ -69,34 +177,36 @@
   pages = {n/a--n/a},
 }
 
+@Article{Niinemets-2001,
+  title = {Global-scale climatic controls of leaf dry mass per area, density, and thickness in trees and shrubs},
+  volume = {82},
+  doi = {10.1890/0012-9658(2001)082[0453:GSCCOL]2.0.CO;2},
+  number = {2},
+  journal = {Ecology},
+  author = {{\"U}lo Niinemets},
+  year = {2001},
+  pages = {453--469},
+}
+
 @Article{Onoda-2011,
   title = {Global patterns of leaf mechanical properties},
   volume = {14},
   doi = {10.1111/j.1461-0248.2010.01582.x},
   number = {3},
   journal = {Ecology Letters},
-  author = {Yusuke Onoda and Mark Westoby and Peter B. Adler and Amy M. F. Choong and Fiona J. Clissold and Johannes H. C. Cornelissen and Sandra D{\'\i}az and Nathaniel J. Dominy and Alison Elgart and Lucas Enrico and Paul V. A. Fine and Jerome J. Howard and Adel Jalili and Kaoru Kitajima and Hiroko Kurokawa and Clare  McArthur and Peter W. Lucas and Lars Markesteijn and Natalia P{\'e}rez-Harguindeguy and Lourens Poorter and Lora Richards and Louis S. Santiago and Enio E. Sosinski and Sunshine A. Van Bael and David I. Warton and I. J. Wright and S. J. Wright and Nayuta Yamashita},
+  author = {Yusuke Onoda and Mark Westoby and Peter B. Adler and Amy M. F. Choong and Fiona J. Clissold and Johannes H. C. Cornelissen and Sandra D{\'\i}az and Nathaniel J. Dominy and Alison Elgart and Lucas Enrico and Paul V. A. Fine and Jerome J. Howard and Adel Jalili and Kaoru Kitajima and Hiroko Kurokawa and Clare McArthur and Peter W. Lucas and Lars Markesteijn and Natalia P{\'e}rez-Harguindeguy and Lourens Poorter and Lora Richards and Louis S. Santiago and Enio E. Sosinski and Sunshine A. Van Bael and David I. Warton and I. J. Wright and S. J. Wright and Nayuta Yamashita},
   year = {2011},
   pages = {301--312},
 }
 
-@Article{Reich-1997,
-  title = {From tropics to tundra: global convergence in plant functioning},
-  volume = {94},
-  journal = {Proceedings of the National Academy of Science, {USA}},
-  author = {P. B. Reich and M. B. Walters and D. S. Ellsworth},
-  year = {1997},
-  pages = {13730--13734},
-}
-
-@Article{Reich-1999,
-  title = {Generality of leaf trait relationships: a test across six biomes},
-  volume = {80},
-  number = {6},
-  journal = {Ecology},
-  author = {P. B. Reich and D. S. Ellsworth and M. B. Walters and J. M. Vose and C. Gresham and J. C. Volin and W. D. Bowman},
-  year = {1999},
-  pages = {1955--1969},
+@Article{Preston-2006b,
+  title = {Wood density and vessel traits as distinct correlates of ecological strategy in 51 California coast range angiosperms.},
+  volume = {170},
+  number = {4},
+  journal = {New Phytologist},
+  author = {Katherine a Preston and William K Cornwell and Jeanne L Denoyer},
+  year = {2006},
+  pages = {807--18},
 }
 
 @Article{Reich-2007,
@@ -120,6 +230,34 @@
   pages = {13703--13708},
 }
 
+@Article{Simova-2014,
+  title = {Shifts in trait means and variances in North American tree assemblages: species richness patterns are loosely related to the functional space},
+  doi = {10.1111/ecog.00867},
+  journal = {Ecography},
+  author = {Irena {\v S}{\'\i}mov \'a and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
+  year = {2014},
+  pages = {n/a--n/a},
+}
+
+@Article{Swenson-2010b,
+  title = {Plant geography upon the basis of functional traits: an example from eastern North American trees.},
+  volume = {91},
+  number = {8},
+  journal = {Ecology},
+  author = {Nathan G Swenson and Michael D Weiser},
+  year = {2010},
+  pages = {2234--41},
+}
+
+@Article{VanBodegom-2014,
+  title = {A fully traits-based approach to modeling global vegetation distribution},
+  doi = {10.1073/pnas.1304551110},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Peter M. Van Bodegom and Jacob C. Douma and Lieneke M. Verheijen},
+  year = {2014},
+  pages = {201304551},
+}
+
 @Article{Wright-2004,
   title = {The world-wide leaf economics spectrum},
   volume = {428},
@@ -141,61 +279,13 @@
   pages = {411--421},
 }
 
-@article{preston-2006b,
-  title = {Wood density and vessel traits as distinct correlates of ecological strategy in 51 California coast range angiosperms.},
-  volume = {170},
-  number = {4},
-  journal = {New Phytologist},
-  author = {Preston, Katherine a and Cornwell, William K and Denoyer, Jeanne L},
-  month = jan,
-  year = {2006},
-  keywords = {Angiosperms,Angiosperms: anatomy \& histology,Angiosperms: growth \& development,Biological Evolution,California,Data Interpretation, Statistical,Ecology,Phylogeny,Soil,Water,Water: metabolism},
-  pages = {807--18}
-}
-
-@article{cornwell-2009c,
-  title = {Community assembly and shifts in plant trait distributions across an environmental gradient in coastal California},
-  volume = {79},
-  number = {1},
-  journal = {Ecological Monographs},
-  author = {Cornwell, William K. and Ackerly, David D.},
-  year = {2009},
-  pages = {109--126}
-}
-
-@article{swenson-2010b,
-  title = {Plant geography upon the basis of functional traits: an example from eastern North American trees.},
-  volume = {91},
-  number = {8},
-  journal = {Ecology},
-  author = {Swenson, Nathan G and Weiser, Michael D},
-  year = {2010},
-  keywords = {Demography,Ecosystem,Plant Leaves,Plant Leaves: chemistry,Population Density,Trees,Trees: physiology,united states,Wood},
-  pages = {2234--41}
-}
-
-@article{gleason-2012,
-  title = {Stem xylem conductivity is key to plant water balance across Australian angiosperm species: Plant stem hydraulic traits},
-  volume = {26},
+@Article{vanOmmenKloeke-2012,
+  title = {Global quantification of contrasting leaf life span strategies for deciduous and evergreen species in response to environmental conditions},
+  volume = {21},
+  doi = {10.1111/j.1466-8238.2011.00667.x},
   number = {2},
-  journal = {Functional Ecology},
-  author = {Gleason, Sean M. and Butler, Don W. and Ziemi{\'n}ska, Kasia and Waryszak, Pawe{\l} and Westoby, Mark},
-  year = {2012},
-  pages = {343--352}
-}
-
-@article{maire-2015,
-  title = {Global effects of soil and climate on leaf photosynthetic traits and rates: Effects of soil and climate on photosynthetic traits},
-  volume = {24},
-  shorttitle = {Global effects of soil and climate on leaf photosynthetic traits and rates},
-  url = {http://doi.wiley.com/10.1111/geb.12296},
-  doi = {10.1111/geb.12296},
-  number = {6},
   journal = {Global Ecology and Biogeography},
-  author = {Maire, Vincent and Wright, Ian J. and Prentice, I. Colin and Batjes, Niels H. and Bhaskar, Radika and van Bodegom, Peter M. and Cornwell, Will K. and Ellsworth, David and Niinemets, {\"U}lo and Ordonez, Alejandro and Reich, Peter B. and Santiago, Louis S.},
-  month = jun,
-  year = {2015},
-  pages = {706--717}
+  author = {A. E. E. van Ommen Kloeke and J. C. Douma and J. C. Ordo{\~n}ez and P. B. Reich and P. M. van Bodegom},
+  year = {2012},
+  pages = {224--235},
 }
-
-
