More empirical references

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -81,22 +81,22 @@ gradients}
 
 \citet{Moles-2014}: data for 10792 species from 722 sites. LMA decreases with MAR, increases with MAT.
 
-\citet{Simova-2014}: across entire Nth American continent, LMA decreasing with MAT and MAP, increasing with degree of seasonality. No signif change in variance. Note patterns with temperature in this study is opposite to all the above results. Also decreases with MAT but increases with degree of seasonality --> is this conflicting?
+\citet{Simova-2014}: across entire Nth American continent, LMA decreasing with MAT and MAP, increasing with degree of seasonality. No significant change in variance. Note patterns with temperature in this study is opposite to all the above results. Also decreases with MAT but increases with degree of seasonality --> is this conflicting?
 
-\citet{Laughlin-2012}: Data for nine tree species in the southwest USA across 196 plots,between 2200 and 3600 m altitude, corresponding to a 10 degC range in MAT. LMA decreased with MAT.
+\citet{Laughlin-2012}: Data for nine tree species in the south-west USA across 196 plots,between 2200 and 3600 m altitude, corresponding to a 10 degC range in MAT. LMA decreased with MAT.
 
+\citet{Fortunel-2014}: higher LMA  in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
 
-\citet{Fortunel 2014}: higher LMA  in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
+\citet{vanOmmenKloeke-2012}: looked at leaf lifespan for 189 deciduous and 506 evergreen species across 83 study locations. The LLS of deciduous and evergreen species showed opposite responses to temperature: deciduous LLS increases while evergreen LLS decreases. Pattern with MAP was weak.
+
+\citet{Douma-2011}: data from 156 plots from natural ecosystems throughout The Netherlands.  Decrease in LMA with nutrient availability.
 
 
 \subsection{Wood density}
 
-\citet{Fortunel 2014}: in white sand forest, higher wood density (WSG) and fiber wall fraction but lower lumen fraction than in flooded forest or terra firme forest (less water stress) but not variation in vessel anatomic and hydraulic traits. However, variation within site is larger than between sites.
-
-\citet{Fortunel 2014}: higher wood density in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
+\citet{Fortunel-2014}: higher wood density in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
 
 \citet{Swenson-2010}: Mean wood density of US forest inventory plot increase with precipitation and temperature. But variance of wood density decrease with Tmax.
-
 
 \citet{Laughlin-2012}: Data for nine tree species in the south-west USA across 196 plots,between 2200 and 3600 m altitude, corresponding to a 10 degC range in MAT. Concave-shaped relationship with MAT.
 
