--- a/ms/references.bib
+++ b/ms/references.bib
@@ -52,17 +52,6 @@
   pages = {825--835},
 }
 
-@Article{Douma-2011,
-  title = {Disturbance and resource availability act differently on the same suite of plant traits: revisiting assembly hypotheses},
-  volume = {93},
-  doi = {10.1890/10-1961.1},
-  number = {4},
-  journal = {Ecology},
-  author = {J. C. Douma and B Shipley and J.-P. M. Witte and R Aerts and P. M. van Bodegom},
-  year = {2011},
-  pages = {825--835},
-}
-
 @Article{Falster-2011,
   author = {D S Falster and {\AA} Br\"annstr\"om and U Dieckmann and M Westoby},
   title = {Influence of four major plant traits on average
@@ -111,14 +100,14 @@
   journal = {New Phytologist},
   author = {Claire Fortunel and Julien Ruelle and Jacques Beauch{\^e}ne and Paul V. A. Fine and Christopher Baraloto},
   year = {2013},
-  pages = {n/a--n/a},
+  volume = {202},
+  pages = {79--94},
 }
 
 @Article{Fortunel-2014,
   title = {Environmental factors predict community functional composition in Amazonian forests},
   volume = {102},
   doi = {10.1111/1365-2745.12160},
-  number = {1},
   journal = {Journal of Ecology},
   author = {Claire Fortunel and C. E. Timothy Paine and Paul V. A. Fine and Nathan J. B. Kraft and Christopher Baraloto},
   year = {2014},
@@ -174,7 +163,8 @@
   journal = {Journal of Vegetation Science},
   author = {Angela T. Moles and Sarah E. Perkins and Shawn W. Laffan and Habacuc Flores-Moreno and Monica Awasthy and Marianne L. Tindall and Lawren Sack and Andy Pitman and Jens Kattge and Lonnie W. Aarssen and Madhur Anand and Michael Bahn and Benjamin Blonder and Jeannine Cavender-Bares and J. Hans C. Cornelissen and Will K. Cornwell and Sandra D{\'\i}az and John B. Dickie and Gr{\'e}goire T. Freschet and Joshua G. Griffiths and Alvaro G. Gutierrez and Frank A. Hemmings and Thomas Hickler and Timothy D. Hitchcock and Matthew Keighery and Michael Kleyer and Hiroko Kurokawa and Michelle R. Leishman and Kenwin Liu and {\"U}lo Niinemets and Vladimir Onipchenko and Yusuke Onoda and Josep Penuelas and Val{\'e}rio D. Pillar and Peter B. Reich and Satomi Shiodera and Andrew Siefert and Enio E. Sosinski and Nadejda A. Soudzilovskaia and Emily K. Swaine and Nathan G. Swenson and Peter M. van Bodegom and Laura Warman and Evan Weiher and Ian J. Wright and Hongxiang Zhang and Martin Zobel and Stephen P. Bonser},
   year = {2014},
-  pages = {n/a--n/a},
+  volume = {25},
+  pages = {1167–1180},
 }
 
 @Article{Niinemets-2001,
@@ -234,12 +224,12 @@
   title = {Shifts in trait means and variances in North American tree assemblages: species richness patterns are loosely related to the functional space},
   doi = {10.1111/ecog.00867},
   journal = {Ecography},
-  author = {Irena {\v S}{\'\i}mov \'a and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
+  author = {Irena {{\v S}{\'\i}mov{\'a}} and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
   year = {2014},
   pages = {n/a--n/a},
 }
 
-@Article{Swenson-2010b,
+@Article{Swenson-2010,
   title = {Plant geography upon the basis of functional traits: an example from eastern North American trees.},
   volume = {91},
   number = {8},
@@ -256,6 +246,16 @@
   author = {Peter M. Van Bodegom and Jacob C. Douma and Lieneke M. Verheijen},
   year = {2014},
   pages = {201304551},
+}
+@article{Wright-2002,
+  title = {Leaves at low versus high rainfall: coordination of structure, lifespan and physiology},
+  volume = {155},
+  doi = {10.1046/j.1469-8137.2002.00479.x},
+  number = {3},
+  journal = {New Phytologist},
+  author = {Wright, I. J. and Westoby, M.},
+  year = {2002},
+  pages = {403--416}
 }
 
 @Article{Wright-2004,
